--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,46 @@
-<app-navbar></app-navbar>
+<div>
+    
+    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: rgb(60, 179, 230);">
+        
+        <div class="container-fluid">
+        
+            <p class="navbar-brand" style="width: 20%;">HealthAppointmentSystem</p>
+        <div style="width: 20%;">
+            
+            <ul class="navbar-nav fw-bold">
+                <li class="nav-item ms-5">
+                    <a routerLink="/">Home</a>
+                </li>
+                <li class="nav-item ms-5">
+                    <a routerLink="*">About</a>
+                </li>
+                <li class="nav-item ms-5">
+                    <a routerLink="login">Login</a>
+                </li>
+                <li class="nav-item ms-5">
+                    <a routerLink="register">Register</a>
+                </li>
+            </ul>
+        </div>
+        <form class="d-flex input-group w-auto" style="width: 60%;">
+            <input type="search" class="form-control" placeholder="Search" aria-label="Search" />
+            <button class="btn btn-outline-primary" type="button"> Search </button>
+          </form>
+    </div>
+    </nav>
+    <!-- <h1 class="text-center">HEALTH APPOINTMENT SYSTEM</h1>
+     -->
+        
+    
+   
+    
+</div>
 <router-outlet></router-outlet>
+<footer  class="bg-light text-center text-white">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        @2020 Copyright:
+        <a href="#">healthservicesbygroup3.com</a>
+    </div>
+</footer>
+
+
