--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,3 +44,8 @@
 </footer>
 
 
+<!-- <app-navbar></app-navbar> -->
+<!-- <app-dashboard></app-dashboard> -->
+
+<!-- <app-admin-navbar> </app-admin-navbar> -->
+<!-- <router-outlet></router-outlet> -->
