--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,17 +31,134 @@
     <!-- <h1 class="text-center">HEALTH APPOINTMENT SYSTEM</h1>
      -->
         
-    
+     <router-outlet></router-outlet>
    
-    
-</div>
-<router-outlet></router-outlet>
-<footer  class="bg-light text-center text-white">
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        @2020 Copyright:
-        <a href="#">healthservicesbygroup3.com</a>
-    </div>
-</footer>
+     <div>
+
+        <footer class="bg-light text-center text-dark ">
+      
+          <div class="container p-4 d-flex justify-content-around">
+      
+              <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
+      
+                <h5 class="text-uppercase mb-4">About us</h5>
+      
+                <p>
+      
+                  line1
+      
+                </p>
+      
+                <p>
+      
+                  line2
+      
+                </p>
+      
+                <div class="mt-4">
+      
+                  <a type="button" class="btn btn-floating btn-light btn-lg"><i class="fab fa-facebook-f"></i></a>
+      
+                  <a type="button" class="btn btn-floating btn-light btn-lg"><i class="fab fa-dribbble"></i></a>
+      
+                  <a type="button" class="btn btn-floating btn-light btn-lg"><i class="fab fa-twitter"></i></a>
+      
+                  <a type="button" class="btn btn-floating btn-light btn-lg"><i
+      
+                      class="fab fa-google-plus-g"></i></a>
+      
+                </div>
+      
+              </div>
+      
+              <div>
+      
+                <h5 class="text-uppercase mb-5">Contact Details</h5>
+      
+                <ul class="fa-ul" style="margin-left: 1.65em;">
+      
+                  <li class="mb-3">
+      
+                    <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">Healthcare,
+      
+                      sector-18
+      
+                      Greater Noida</span>
+      
+                  </li>
+      
+                  <li class="mb-3">
+      
+                    <span class="fa-li"><i class="fas fa-envelope"></i></span><span
+      
+                      class="ms-2">healthcare@gmail.com</span>
+      
+                  </li>
+      
+                  <li class="mb-3">
+      
+                    <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">+91-
+      
+                      7087609769</span>
+      
+                  </li>
+      
+                </ul>
+      
+              </div>
+      
+              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+      
+                <h5 class="text-uppercase mb-4">Opening hours</h5>
+      
+                <table class="table text-center text-white w-10">
+      
+                  <tbody class="fw-normal">
+      
+                    <tr>
+      
+                      <td>Mon - Thu:</td>
+      
+                      <td>8am - 9pm</td>
+      
+                    </tr>
+      
+                    <tr>
+      
+                      <td>Fri - Sat:</td>
+      
+                      <td>8am - 1am</td>
+      
+                    </tr>
+      
+                    <tr>
+      
+                      <td>Sunday:</td>
+      
+                      <td>9am - 10pm</td>
+      
+                    </tr>
+      
+                  </tbody>
+      
+                </table>
+      
+              </div>
+      
+          </div>
+      
+          <div class="text-center p-3" style="background-color: rgba(120, 147, 158, 0.39);">
+      
+            @2020 Copyright:
+      
+            <a href="#">healthservicesbygroup3.com</a>
+      
+          </div>
+      
+        </footer>
+      
+      </div>
+
 
 
 <!-- <app-navbar></app-navbar> -->
