--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,21 +4,21 @@
         
         <div class="container-fluid">
         
-            <p class="navbar-brand" style="width: 20%;">HealthAppointmentSystem</p>
+            <p class="navbar-brand navbar-text text-dark" style="width: 20%;">HealthAppointmentSystem</p>
         <div style="width: 20%;">
             
-            <ul class="navbar-nav fw-bold">
+            <ul class="navbar-nav navbar-text fw-bold">
                 <li class="nav-item ms-5">
-                    <a routerLink="/">Home</a>
+                    <a routerLink="/" class="text-decoration-none text-dark">Home</a>
                 </li>
                 <li class="nav-item ms-5">
-                    <a routerLink="*">About</a>
+                    <a routerLink="*" class="text-decoration-none text-dark">About</a>
                 </li>
                 <li class="nav-item ms-5">
-                    <a routerLink="login">Login</a>
+                    <a routerLink="login" class="text-decoration-none text-dark">Login</a>
                 </li>
                 <li class="nav-item ms-5">
-                    <a routerLink="register">Register</a>
+                    <a routerLink="register" class="text-decoration-none text-dark">Register</a>
                 </li>
             </ul>
         </div>
@@ -157,7 +157,7 @@
       
         </footer>
       
-      </div>
+</div>
 
 
 
