--- a/src/app/AdminComponents/tests/tests.component.html
+++ b/src/app/AdminComponents/tests/tests.component.html
@@ -1,4 +1,31 @@
 <div class="d-flex row">
+    <div class="container col-3">
+        <h3 class="mt-5">Add/Update Test</h3>
+        <hr>
+        <form class="row" #testForm="ngForm" (ngSubmit)="testForms(testForm.value)">
+            <div class="form-group p-2 " >
+                <input type="text" name="testName" id="testName" pattern="[a-zA-Z]+$" placeholder="Test Name" class="form-control" required minlength="4" [(ngModel)]="model.testName" #testName="ngModel" ngModel/>
+                <span *ngIf="testName.invalid && testName.touched" style="color: red;">Please enter valid input</span>
+            </div>
+            <div class="form-group p-2 ">
+                <input type="number" name="testPrice" id="testPrice"  placeholder="Price" class="form-control" required [(ngModel)]="model.testPrice"  #testPrice="ngModel" ngModel/>
+                <span *ngIf="testPrice.invalid && testPrice.touched" style="color: red;">Please enter valid input</span>
+            </div>
+            <div class="form-group p-2 col-6">
+                <input type="number" placeholder="Normal Value" name="testNormalValue" id="testNormalValue" class="form-control" required  [(ngModel)]="model.testNormalValue"  #testNormalValue="ngModel" ngModel/>
+                <span *ngIf="testNormalValue.invalid && testNormalValue.touched" style="color: red;">Please enter valid input</span>
+            </div>
+            <div class="form-group p-2 col-6">
+                <input type="number" placeholder="Units" name="testUnits" id="testUnits" class="form-control" required [(ngModel)]="model.testUnits"  #testUnits="ngModel" ngModel/>
+                <span *ngIf="testUnits.invalid && testUnits.touched" style="color: red;">Please enter valid input</span>
+            </div>
+            <div class="form-group p-2">
+                <button class="btn btn-success" [disabled]="testForm.invalid" type="submit" >Submit</button>
+                        &nbsp;
+                <button class="btn btn-info" type="reset" >Cancel</button>
+            </div>
+        </form>
+    </div>
     <div class="container col-5 ">
         <h3 class="mt-5">Tests List</h3>
         <hr>
@@ -26,31 +53,19 @@
                         <button class="btn btn-danger">Delete</button>
                     </td>
                 </tr>
+                <tr>
+                    <td>2</td>
+                    <td>{{testName.value}}</td>
+                    <td>${{testPrice.value}}</td>
+                    <td>{{testNormalValue.value}}</td>
+                    <td>{{testUnits.value}}</td>
+                    <td>
+                        <button class="btn btn-warning">Edit</button>
+                        &nbsp;
+                        <button class="btn btn-danger">Delete</button>
+                    </td>
+                </tr>
             </tbody>
         </table>
-    </div>
-
-    <div class="container col-3">
-        <h3 class="mt-5">Add/Update Test</h3>
-        <hr>
-        <form class="row">
-            <div class="form-group p-2 " >
-                <input type="text" placeholder="Test Name" class="form-control"/>
-            </div>
-            <div class="form-group p-2 ">
-                <input type="number" placeholder="Price" class="form-control"/>
-            </div>
-            <div class="form-group p-2 col-6">
-                <input type="number" placeholder="Normal Value" class="form-control"/>
-            </div>
-            <div class="form-group p-2 col-6">
-                <input type="number" placeholder="Units" class="form-control"/>
-            </div>
-            <div class="form-group p-2">
-                <button class="btn btn-success" type="submit" >Submit</button>
-                        &nbsp;
-                <button class="btn btn-info" type="reset" >Cancel</button>
-            </div>
-        </form>
     </div>
 </div>
