post and get api
post and get api

--- a/src/app/AdminComponents/tests/tests.component.html
+++ b/src/app/AdminComponents/tests/tests.component.html
@@ -41,24 +41,12 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Blood Test</td>
-                    <td>$100</td>
-                    <td>50</td>
-                    <td>20</td>
-                    <td>
-                        <button class="btn btn-warning">Edit</button>
-                        &nbsp;
-                        <button class="btn btn-danger">Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>{{testName.value}}</td>
-                    <td>${{testPrice.value}}</td>
-                    <td>{{testNormalValue.value}}</td>
-                    <td>{{testUnits.value}}</td>
+                <tr >
+                    <td>{{1}}</td>
+                    <td>{{testName}}</td>
+                    <td>{{testPrice}}</td>
+                    <td>{{testNormalValue}}</td>
+                    <td>{{testUnits}}</td>
                     <td>
                         <button class="btn btn-warning">Edit</button>
                         &nbsp;
