--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -18,6 +18,7 @@
                         </div>
                     
                 </div>
+                <input type="hidden" formControlName="type">
                 <select class="form-control mb-3 form-group" formControlName="gender">
                     <option [ngValue]="" value="" selected disabled>Select Gender</option>
                         <option  *ngFor="let gender of allGenders" [ngValue]="gender">{{gender}}</option>
