--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container background-image">
+<div class="background-image">
 
     <div
    
@@ -6,17 +6,31 @@
    
       background-size: 100% auto, cover;
    
-      filter: opacity(90%);
+      /* filter: opacity(90%); */
    
          height: 100vh;" >
    
-         <header class="bg-light text-center py-1" style="color: rgb(60, 179, 230);">
+         <header class="bg-light text-center" style="color: rgb(60, 179, 230);">
    
-          <h3 class="text-uppercase">About Us</h3>
+          <hr>
+   
+          <h4 class="text-uppercase">About Us</h4>
+   
+          <hr>
    
          </header>
    
-         <div class="text-center text-dark p-4 mt-5 mb-5">
+         <div class="text-center text-dark p-4 mt-5 mb-5" style="background-color: rgba(255, 255, 255, 0.4);
+   
+         -webkit-backdrop-filter: blur(20px);
+   
+         backdrop-filter: blur(20px);
+   
+         padding: 20px;
+   
+         margin: 200px;
+   
+         font-weight: normal;">
    
      <section>
    
@@ -65,34 +79,6 @@
     </div>
    
    </div>
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
    
    
    
