--- a/src/app/AdminComponents/tests/tests.component.html
+++ b/src/app/AdminComponents/tests/tests.component.html
@@ -1,10 +1,10 @@
-<div class="d-flex row">
+<div class="d-flex row mb-2">
     <div class="container col-3">
         <h3 class="mt-5">Add/Update Test</h3>
         <hr>
-        <form class="row" #testForm="ngForm" (ngSubmit)="testForms(testForm.value)">
+        <form class="row" #testForm="ngForm" (ngSubmit)="testForms(testForm.value); testForm.resetForm()">
             <div class="form-group p-2 " >
-                <input type="text" name="testName" id="testName" pattern="[a-zA-Z]+$" placeholder="Test Name" class="form-control" required minlength="4" [(ngModel)]="model.testName" #testName="ngModel" ngModel/>
+                <input type="text" name="testName" id="testName" pattern="[a-zA-Z ]+$" placeholder="Test Name" class="form-control" required minlength="4" [(ngModel)]="model.testName" #testName="ngModel" ngModel/>
                 <span *ngIf="testName.invalid && testName.touched" style="color: red;">Please enter valid input</span>
             </div>
             <div class="form-group p-2 ">
@@ -22,13 +22,16 @@
             <div class="form-group p-2">
                 <button class="btn btn-success" [disabled]="testForm.invalid" type="submit" >Submit</button>
                         &nbsp;
-                <button class="btn btn-info" type="reset" >Cancel</button>
+                <button class="btn btn-info" type="reset"  >Cancel</button>
             </div>
-            <p class="text-success">{{addTestMessage}}</p> 
+            <p class="text-success">{{addTestMessage}}</p>
+          
+
         </form>
     </div>
     <div class="container col-5 ">
         <h3 class="mt-5">Tests List</h3>
+        <p class="text-danger">{{deleteTestMessage}}</p> 
         <hr>
         <div class="table-responsive">
         <table class="table text-center mt-1 table-striped  ">
@@ -50,9 +53,8 @@
                     <td>{{test.testNormalValue}}</td>
                     <td>{{test.testUnits}}</td>
                     <td>
-                        <button class="btn btn-warning">Edit</button>
-                        &nbsp;
-                        <button class="btn btn-danger">Delete</button>
+                        <button class="btn btn-danger" (click)="deleteTest(test.id)"><i class="fa fa-trash"></i></button>
+                        
                     </td>
                 </tr>
             </tbody>
