testcenter add delete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
+
+
 <div>
   <nav
     class="navbar navbar-light navbar-expand-lg"
     style="background-color: rgb(153, 220, 248); height: 60px"
   >
     <img
-      src="https://o.remove.bg/downloads/c744e12b-6f94-4f97-a1a0-7a5eb4510d2e/Medical-health-care-logo-design-template-removebg-preview.png
-
-   "
+      src="../assets/images/projLogo.png"
       alt=""
       width="70"
       height="70"
