--- a/src/app/AdminComponents/dashboard/dashboard.component.html
+++ b/src/app/AdminComponents/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 
-<div class="container ">
+<div class="container mb-5">
     <h2 class="border-bottom border-2 mt-2">Admin Dashboard</h2>
     <div class="d-flex justify-content-around mt-5">
     <div class="card zoomCard" style="width: 18rem;">
