--- a/src/app/AdminComponents/test-center/test-center.component.html
+++ b/src/app/AdminComponents/test-center/test-center.component.html
@@ -15,27 +15,28 @@
                 </tr>   
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>MediCenter</td>
-                    <td>987456123</td>
-                    <td>Greater Noida   </td>
-                    <td>medi@gmail.com</td>
-                    <td>Blood Test</td>
+                <tr *ngFor="let cenlist of centerList">
+                    <td>{{cenlist.id}}</td>
+                    <td>{{cenlist.centerName}}</td>
+                    <td>{{cenlist.centerContact}}</td>
+                    <td> {{cenlist.centerAddress}}  </td>
+                    <td> {{cenlist.centerEmail}}</td>
+                    <td> {{cenlist.testsOffered}}</td>
                     <td>
                         <button class="btn btn-warning">Edit</button>
                         &nbsp;
-                        <button class="btn btn-danger">Delete</button>
+                        <button class="btn btn-danger" (click)="deleteCenter(cenlist.id)">Delete</button>
                     </td>
                 </tr>
             </tbody>
         </table>
+        <p class="text-danger">{{this.deleteCenterMessage}}</p>
     </div>
 
     <div class="container col-3">
         <h3 class="mt-5">Add/Update Center</h3>
         <hr>
-        <form class="row" [formGroup]="centerForm" (ngSubmit)="submitCenter()">
+        <form class="row" [formGroup]="centerForm" (ngSubmit)="submitCenter()" >
             <div class="form-group p-2 " >
                 <input type="text" placeholder="Center Name" class="form-control" formControlName="centerName"/>
                 <span style="color: red;" *ngIf="center && center.invalid && center.touched">Please enter valid input</span>
@@ -57,7 +58,7 @@
                 <span style="color: red;" *ngIf="center && center.invalid && center.touched">Please enter valid input</span>
             </div>
             <div class="form-group p-2">
-                <button class="btn btn-success" type="submit" >Submit</button>
+                <button class="btn btn-success" type="button" (click)="addCenter(this.centerForm.value)" [disabled]="this.centerForm.invalid">Submit</button>
                         &nbsp;
                 <button class="btn btn-info" type="reset" >Cancel</button>
             </div>
