--- a/src/app/AdminComponents/tests/tests.component.html
+++ b/src/app/AdminComponents/tests/tests.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex row mb-2">
+<div class="d-flex mb-2">
     <div class="container col-3">
         <h3 class="mt-5">Add/Update Test</h3>
         <hr>
@@ -29,7 +29,7 @@
 
         </form>
     </div>
-    <div class="container col-5 ">
+    <div class="container col-6 ">
         <h3 class="mt-5">Tests List</h3>
         <p class="text-danger">{{deleteTestMessage}}</p> 
         <hr>
